# research_adr

./: .gitignore  AGENTS.md  ARCX-20260222-FLN6G65U95.zip:Zone.Identifier  CLAUDE.md  LASSO_PIPELINE_README.md  XNAS-20260222-9Y7BVLF349.zip:Zone.Identifier  commit_bbo-1m.sh  d  dvc.yaml  equities_only_portfolio.xlsx  futures_and_equities_portfolio.xlsx  params.yaml  pyproject.toml
.claude/: responses.txt
.dvc/: config
adr_strategy_kernel/: __init__.py  common.py  residual_utils.py  risk.py
agent_notes/: ADJUSTMENT_FACTOR_FIX.md  BLOOMBERG_ISSUE.md  IMPLEMENTATION_SUMMARY.md  PLAN_russell1000_adjusted.md
backtest_conifgs/: all_gbp_eur_single_time.yaml  db_hedged_single_time.yaml  first_run_copy.yaml  futures_hedged_next_open_single_time.yaml  futures_hedged_single_time.yaml  fx_hedged_single_time.yaml  hedged_single_time.yaml  hedged_single_time_hk.yaml  minute_VWAP.yaml  minute_vwap_hedged_ADR.yaml  morning_futures_hedged_next_open_single_time_asia.yaml  morning_futures_hedged_single_time_asia.yaml  morning_hedged_single_time_asia.yaml  single_time.yaml  single_time_ADR_passive.yaml  single_time_ret_cov.yaml  test_external.yaml
live_trading/: current_only_futures_signal.py  generate_emsx_targets.py
model_build/: README.md  dvc.yaml
notebooks/: adr_gbp_eur.csv  adr_prediction.ipynb  adr_top_three_currencies.csv  all_adr_filtered.csv  all_auction_time_brit_intraday_adr_prediction.ipynb  analize_barchart.ipynb  analyze_barchart.ipynb  analyze_barchart_eubanks.ipynb  analyze_hedged_prediction.ipynb  analyze_hedged_prediction_with_open.ipynb  asia_premium.ipynb  (+57 more)
(+211 files in other folders)
